<resources>
    <string name="app_name">فروشگاه برای چالش</string>

    <string name="slogan">بهترین خرید زندگیت رو با ما تجربه کن!</string>
    <string name="web_site">www.aradsheybak.ir</string>
    <string name="title_no_internet">اینترنت دستگاه قطع می باشد</string>
    <string name="description_no_internet">برای استفاده از اپلیکیشن شما نیاز به اینترنت دارید، لطفا اینترنت دستگاه خود را بررسی بفرمایید.</string>
    <string name="connect_to_wifi">اتصال به wifi</string>
    <string name="connect_to_mobile_data">اتصال به دیتای موبایل</string>

    <string name="login">ورود</string>
    <string name="username">نام کاربری</string>
    <string name="hint_username">ایمیل خود را وارد نمایید.</string>
    <string name="password">کلمه عبور</string>
    <string name="hint_password">کلمه عبور را وارد نمایید.</string>
    <string name="create_account">حساب کاربری ندارید؟ ثبت نام</string>
    <string name="forget_password">کلمه عبور را فراموش کرده ام!</string>
    <string name="sign_up">ثبت نام</string>
    <string name="email">ایمیل</string>
    <string name="confirm_password">ثبت کلمه عبور</string>
    <string name="hint_confirm_password">مجددا کلمه عبور را وارد نمایید.</string>
    <string name="get_verification_code">دریافت کد یکبار مصرف</string>
    <string name="verify_code">تایید کد</string>
    <string name="verification_code">کد تاییدیه</string>
    <string name="hint_verification_code">کد تاییدیه را وارد نمایید.</string>
    <string name="profile">پروفایل</string>
    <string name="shopping_basket">سبد خرید</string>
    <string name="categories">دسته بندی ها</string>
    <string name="home">خانه</string>

    <string name="sample_product_name">گوشی موبایل اپل آیفون 12 پرو 128 گیگ</string>
    <string name="sample_product_description">گوشی موبایل آیفون 12 پرو با حافظه 128 گیگ رجیستر شده و گارانتی اصلی به همراه هدیه ی ویژه</string>
    <string name="sample_old_product_price">34,650,000 تومان</string>
    <string name="sample_new_product_price">32,458,700 تومان</string>
    <string name="sample_product_discount">20%</string>






</resources>