<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUp.SignUpActivity"
    android:background="@color/dark_bg"
    >

    <TextView
        android:id="@+id/tv_title_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_30sp"
        android:text="@string/sign_up"
        />

    <TextView
        android:id="@+id/tv_title_email_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/et_input_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email_sign_up"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/gray_s"
        android:background="@drawable/shp_edittext_strok"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/tv_title_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_input_email_sign_up"
        app:layout_constraintRight_toRightOf="@id/tv_title_email_sign_up"
        android:layout_marginTop="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/et_input_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_sign_up"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/gray_s"
        android:background="@drawable/shp_edittext_strok"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:gravity="right"/>


    <TextView
        android:id="@+id/tv_title_confirm_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_input_password_sign_up"
        app:layout_constraintRight_toRightOf="@id/tv_title_email_sign_up"
        android:layout_marginTop="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:text="@string/confirm_password"
        />

    <EditText
        android:id="@+id/et_input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_password_sign_up"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:hint="@string/hint_confirm_password"
        android:textColorHint="@color/gray_s"
        android:background="@drawable/shp_edittext_strok"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:gravity="right"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_confirm_password"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintWidth_percent="0.4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        android:text="@string/sign_up"
        android:background="@drawable/shp_rec_gold"
        />
</androidx.constraintlayout.widget.ConstraintLayout>