<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_item_sample_wonder">

    <com.joooonho.SelectableRoundedImageView
        android:id="@+id/iv_item_wonder_suggestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_20dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:sriv_left_bottom_corner_radius="@dimen/padding_10dp"
        app:sriv_left_top_corner_radius="@dimen/padding_10dp"
        app:sriv_right_bottom_corner_radius="@dimen/padding_10dp"
        app:sriv_right_top_corner_radius="@dimen/padding_10dp" />

    <TextView
        android:id="@+id/tv_name_item_wonder_suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/iv_item_wonder_suggestion"
        app:layout_constraintRight_toRightOf="@id/iv_item_wonder_suggestion"
        app:layout_constraintTop_toBottomOf="@id/iv_item_wonder_suggestion"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="@color/gray_d"
        android:textSize="@dimen/font_16sp"
        android:text="@string/sample_product_name"
        android:layout_marginTop="@dimen/padding_10dp"
        />

    <TextView
        android:id="@+id/tv_description_item_wonder_suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_item_wonder_suggestion"
        app:layout_constraintLeft_toLeftOf="@id/iv_item_wonder_suggestion"
        app:layout_constraintRight_toRightOf="@id/iv_item_wonder_suggestion"
        android:layout_marginTop="@dimen/padding_10dp"
        android:textStyle="bold"
        android:textColor="@color/gray_d"
        android:textSize="@dimen/font_13sp"
        android:gravity="right"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/sample_product_description"
        />

    <TextView
        android:id="@+id/tv_old_price_item_wonder_suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/iv_item_wonder_suggestion"
        app:layout_constraintTop_toBottomOf="@id/tv_description_item_wonder_suggestion"
        android:layout_marginTop="@dimen/padding_10dp"
        android:textStyle="bold"
        android:textColor="@color/gray_s"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintWidth_percent="0.6"
        android:gravity="center"
        android:text="@string/sample_old_product_price"
        app:layout_constraintRight_toLeftOf="@id/tv_discount_item_wonder_suggestion"
        android:layout_marginRight="@dimen/padding_5dp"
        />

    <TextView
        android:id="@+id/tv_discount_item_wonder_suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_description_item_wonder_suggestion"
        app:layout_constraintRight_toRightOf="@id/iv_item_wonder_suggestion"
        android:textStyle="bold"
        android:textColor="@color/red_xl"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintWidth_percent="0.3"
        android:gravity="center"
        android:text="@string/sample_product_discount"
        android:layout_marginTop="@dimen/padding_10dp"
        app:layout_constraintLeft_toRightOf="@id/tv_old_price_item_wonder_suggestion"
        android:layout_marginLeft="@dimen/padding_5dp"
        />

    <TextView
        android:id="@+id/tv_new_price_item_wonder_suggestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_discount_item_wonder_suggestion"
        app:layout_constraintLeft_toLeftOf="@id/iv_item_wonder_suggestion"
        app:layout_constraintRight_toRightOf="@id/iv_item_wonder_suggestion"
        android:layout_marginTop="@dimen/padding_10dp"
        android:textStyle="bold"
        android:textColor="@color/green_xl"
        android:textSize="@dimen/font_30sp"
        android:gravity="center"
        android:text="@string/sample_new_product_price"
        />
</androidx.constraintlayout.widget.ConstraintLayout>