<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    tools:context=".Activity.ForgetPassword.STP1.ForgetPasswordGetEmailActivity">


    <ImageView
        android:id="@+id/iv_logo_get_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintHeight_percent="0.3"
        android:src="@drawable/ic_logo_login"
        />

    <TextView
        android:id="@+id/tv_title_email_get_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_50dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/et_email_get_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email_get_email"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_13sp"
        android:hint="@string/hint_username"
        android:textColorHint="@color/gray_s"
        android:background="@drawable/shp_edittext_strok"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/btn_get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_get_email"
        android:layout_marginTop="@dimen/margin_25dp"
        android:textStyle="bold"
        android:paddingLeft="@dimen/margin_15dp"
        android:paddingRight="@dimen/margin_15dp"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        android:text="@string/get_verification_code"
        android:background="@drawable/shp_rec_gold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>